Error Mitigation/MagiCoder/Data/org_omg_PortableServer/org_omg_PortableServerOutputResult.txt
Sample: ImplicitActivationPolicyValue_2
----------------------------------------------------------------
output:
./Data/org_omg_PortableServer/javaFiles/ImplicitActivationPolicyValue_2.java:1: error: package org.omg.PortableServer does not exist
import org.omg.PortableServer.ImplicitActivationPolicyValue;
                             ^
./Data/org_omg_PortableServer/javaFiles/ImplicitActivationPolicyValue_2.java:5: error: cannot find symbol
        ImplicitActivationPolicyValue policy = new ImplicitActivationPolicyValue();
        ^
  symbol:   class ImplicitActivationPolicyValue
  location: class ImplicitActivationPolicyValue_2
./Data/org_omg_PortableServer/javaFiles/ImplicitActivationPolicyValue_2.java:5: error: cannot find symbol
        ImplicitActivationPolicyValue policy = new ImplicitActivationPolicyValue();
                                                   ^
  symbol:   class ImplicitActivationPolicyValue
  location: class ImplicitActivationPolicyValue_2
3 errors


================================================================

